--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
 @import 'tailwindcss/utilities';
 
 /* Your custom styles go here */
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
